test/Fail/Issue4118.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  a _ab_20 = a ab : A (blocked on _ab_20)

Issue4118.agda:37.35-39: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue4118.agda:37.35-39

Issue4118.agda:47.12-15: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue4118.agda:47.12-15
  Issue4118.agda:47.14-15
